searching also needs tenantId